Fix mobile zip-up spacing (image gallery -> project credits transition)

--- a/app/states/root/section-state/project-state/_project-state_styles.scss
+++ b/app/states/root/section-state/project-state/_project-state_styles.scss
@@ -352,6 +352,12 @@
 
 .image-gallery-wrapper
 {
+	@include respond-to('small')
+	{
+		margin-top: 2em;
+		margin-bottom: 1em;
+	}
+
 	margin: 2em 0;
 }
 
